[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-edge"
version = "0.1.0"
description = "Lightweight Mamba implementation for edge devices using NumPy"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "torch>=2.0.0",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
